# weather-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
docs/: README.md
docs/adr/: 0001-use-open-meteo-api.md
docs/api/: endpoints.md
docs/architecture/: c4-level1-context.md  sequence-forecast.md
docs/guides/: deployment.md  getting-started.md
docs/plans/: observability.md  performance-benchmark.md
docs/skills/: README.md  architecture-diagrams.md  commit-standards.md  deployment.md  observability.md  peer-review.md  performance.md  test-coverage.md
docs/standards/: best-practices.md  commit-guidelines.md  test-coverage.md
k8s/deployments/: redis.yaml  weather-api.yaml
k8s/observability/: grafana.yaml  prometheus.yaml
k8s/secrets/: grafana-admin.yaml  grafana-admin.yaml.template
k8s/services/: weather-api.yaml
scripts/: install-hooks.sh  pre-commit  setup-secrets.sh  smoke-test.sh
src/weather_api/: __init__.py  auth.py  config.py  main.py  ratelimit.py  schemas.py
src/weather_api/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
src/weather_api/routes/: auth.py  forecast.py
src/weather_api/services/: __init__.py  cache.py  weather.py
tests/: conftest.py  test_auth.py  test_config.py  test_forecast.py  test_jwt_auth.py  test_main.py  test_weather_service.py
tests/integration/: __init__.py  test_auth_ratelimit.py  test_cache_integration.py  test_end_to_end.py  test_graceful_degradation.py  test_observability.py  test_observability_stack.py
tests/performance/: locustfile.py
