[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-api"
version = "0.1.0"
description = "Weather forecast API built with FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weather_api"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["weather_api"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
